# COP-Kmeans

./: .gitignore  pyproject.toml
examples/: github_example.py
