[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "copkmeans"
version = "1.5"
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]

[project.urls]
Homepage = "https://github.com/Behrouz-Babaki/COP-Kmeans"
Issues = "https://github.com/Behrouz-Babaki/COP-Kmeans/issues"

